--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,13 @@
         <h2>{{details["title"]}}</h2>
         <p><em>Written by {{details["author"]}}</em></p>
         <p>Post content:{{details["content"]}}</p>
+         <div>
+            <a href="{{ url_for('likePost', id=details['id']) }}">
+                <button class="like-btn">
+                    Like <span id="likes-count-{{ details['id'] }}">{{ details["likes"] }}</span>
+                </button>
+            </a>
+        </div>
         <form action="{{ url_for('update', post_id=details['id']) }}" method="GET">
         <button type="submit">Update</button>
         </form>
