--- a/templates/update.html
+++ b/templates/update.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Blog Post</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+    <h1>Update Blog Post</h1>
+    <form method="POST">
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" value="{{ post['author'] }}" required><br><br>
 
-<h1>Update Blog Post</h1>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" value="{{ post['title'] }}" required><br><br>
 
-<form method="POST">
-    <label for="author">Author:</label><br>
-    <input type="text" id="author" name="author" value="{{ post['author'] }}" required><br><br>
+        <label for="content">Content:</label><br>
+        <textarea id="content" name="content" required>{{ post['content'] }}</textarea><br><br>
 
-    <label for="title">Title:</label><br>
-    <input type="text" id="title" name="title" value="{{ post['title'] }}" required><br><br>
+        <label for="likes">Likes:</label>
+        <input type="number" id="likes" name="likes" value="{{ post['likes'] }}" required><br><br>
 
-    <label for="content">Content:</label><br>
-    <textarea id="content" name="content" rows="4" required>{{ post['content'] }}</textarea><br><br>
-
-    <button type="submit">Update Post</button>
-</form>
-
+        <button type="submit">Update Post</button>
+    </form>
+    <br>
+    <a href="{{ url_for('index') }}">Back to Posts</a>
 </body>
 </html>
